--- a/.travis.yml
+++ b/.travis.yml
@@ -14,9 +14,9 @@ install:
 - if [ "$TRAVIS_OS_NAME" = "osx" ]; then brew update; fi
 - if [ "$TRAVIS_OS_NAME" = "osx" ]; then brew install mono-libgdiplus libpng; fi
 
-- if [ "$TRAVIS_OS_NAME" = "linux" ]; then add-apt-repository ppa:quamotion/ppa; fi
-- if [ "$TRAVIS_OS_NAME" = "linux" ]; then apt-get update; fi
-- if [ "$TRAVIS_OS_NAME" = "linux" ]; then apt-get install -y libgdiplus libpng-dev; fi
+- if [ "$TRAVIS_OS_NAME" = "linux" ]; then sudo add-apt-repository ppa:quamotion/ppa; fi
+- if [ "$TRAVIS_OS_NAME" = "linux" ]; then sudo apt-get update; fi
+- if [ "$TRAVIS_OS_NAME" = "linux" ]; then sudo apt-get install -y libgdiplus libpng-dev; fi
 
 script:
 - dotnet --version
