--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,7 @@ install:
 
 - if [ "$TRAVIS_OS_NAME" = "linux" ]; then sudo add-apt-repository ppa:quamotion/ppa -y; fi
 - if [ "$TRAVIS_OS_NAME" = "linux" ]; then sudo apt-get update; fi
-- if [ "$TRAVIS_OS_NAME" = "linux" ]; then sudo apt-get install -y libgdiplus libpng-dev; fi
+- if [ "$TRAVIS_OS_NAME" = "linux" ]; then sudo apt-get install -y libgdiplus libpng16-dev; fi
 
 script:
 - dotnet --version
