Documentation, refactor API

--- a/libpng-sharp/libpng-sharp.csproj
+++ b/libpng-sharp/libpng-sharp.csproj
@@ -12,4 +12,8 @@
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Nerdbank.GitVersioning" Version="2.1.23" PrivateAssets="All" />
+  </ItemGroup>
+
 </Project>
