Update benchmarks, don't do new runs for now

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -10,7 +10,7 @@ test_script:
 - cd libpng-sharp.Tests
 - dotnet test
 - cd ../Benchmarks
-- dotnet run -c Release
+#- dotnet run -c Release
 
 artifacts:
 - path: '**\*.nupkg'
